--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "build": "remix init && remix vite:build",
-    "dev": "remix init && remix vite:dev",
+    "build": "remix vite:build",
+    "dev": "remix vite:dev",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-    "start": "remix init && netlify serve",
+    "start": "netlify serve",
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@netlify/edge-functions": "^3.0.3",
     "@netlify/functions": "^5.1.2",
     "@netlify/remix-adapter": "^2.7.0",
-    "@netlify/remix-edge-adapter": "^3.5.0",
-    "@netlify/remix-runtime": "^2.4.0",
     "@remix-run/node": "^2.17.3",
     "@remix-run/react": "^2.17.3",
     "@remix-run/serve": "^2.17.3",
-    "isbot": "^5.1.32"
+    "isbot": "^5.1.32",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.17.3",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "autoprefixer": "^10.4.24",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -33,6 +33,8 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.9.3",
     "vite": "^6.4.1",
     "vite-tsconfig-paths": "^6.0.3"
